--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^4.16.0
   random_string: ^2.3.1
   fluttertoast: ^8.2.4
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +76,7 @@ flutter:
     - assets/home_image.png
     - assets/logo_ahad.png
     - assets/images/
+    - assets/images/background_header_admin.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
