--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   random_string: ^2.3.1
   fluttertoast: ^8.2.4
   get: ^4.6.6
+  firebase_auth: 4.19.1
+  flutter_email_sender: ^6.0.2
+  mailer: ^6.1.0
+  ionicons: ^0.2.2
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +81,7 @@ flutter:
     - assets/logo_ahad.png
     - assets/images/
     - assets/images/background_header_admin.jpg
+    - assets/profile_picture.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
